@@ -10,7 +10,7 @@
    ],
    "meta-spec" : {
       "url" : "http://search.cpan.org/perldoc?CPAN::Meta::Spec",
-      "version" : "2"
+      "version" : 2
    },
    "name" : "vars-i",
    "no_index" : {
@@ -73,6 +73,6 @@
    "x_contributors" : [
       "Christopher White <cxw@cpan.org>"
    ],
-   "x_serialization_backend" : "JSON::PP version 2.27400_02",
+   "x_serialization_backend" : "JSON::PP version 4.03",
    "x_static_install" : 1
 }
